force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__SkipReview__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SkipReview__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the review step should be skipped for items in the cart</description>
    <inlineHelpText>Indicates whether the review step should be skipped for items in the cart</inlineHelpText>
    <label>Skip Review</label>
    <type>Checkbox</type>
</CustomField>