force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__SplitCartThreshold__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SplitCartThreshold__c</fullName>
    <label>Split Cart Threshold</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>