force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__StaticCriteriaFields__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__StaticCriteriaFields__c</fullName>
    <description>Constraint Criteria Fields that have static values. Fields whose value do not change after the records are created for a cart.</description>
    <inlineHelpText>Enter comma separated fields used in constraint rule criteria to optimize constraint rule.</inlineHelpText>
    <label>Static Criteria Fields</label>
    <type>TextArea</type>
</CustomField>