force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__TotalingGroupType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__TotalingGroupType__c</fullName>
    <description>The totaling group preference.</description>
    <inlineHelpText>The default value for the summary group type picklist. For Product based totaling, also indicate the fields which form the hierarchy using the Product Hierarchy Fields custom setting.
Valid values are:
=============
Category
Product
Ad Hoc</inlineHelpText>
    <label>Totaling Group Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>