force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__UpdateViewProductBatchSize__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__UpdateViewProductBatchSize__c</fullName>
    <defaultValue>2000</defaultValue>
    <description>Indicates the number of products to update views for in a single batch transaction</description>
    <inlineHelpText>Indicates the number of products to update views for in a single batch transaction</inlineHelpText>
    <label>Update View Product Batch Size</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>