force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__UseButtonToSaveSelection__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__UseButtonToSaveSelection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether to wait for button click before processing option selection and validation.</description>
    <inlineHelpText>Indicates whether to wait for button click before processing option selection and validation.</inlineHelpText>
    <label>Use Button To Save Selection</label>
    <type>Checkbox</type>
</CustomField>