force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__UseEnhancedCSS__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__UseEnhancedCSS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether to include the enhanced css file on CPQ pages</description>
    <inlineHelpText>Indicates whether to include the enhanced css file on CPQ pages</inlineHelpText>
    <label>Use Enhanced CSS</label>
    <type>Checkbox</type>
</CustomField>