force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__ValidateRampsForValidCart__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ValidateRampsForValidCart__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Validate Ramps when the custom validation check is successful.</description>
    <inlineHelpText>Validate Ramps when the custom validation check is successful.</inlineHelpText>
    <label>Validate Ramps For Valid Cart</label>
    <type>Checkbox</type>
</CustomField>