force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__ViewCartCustomFields2__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ViewCartCustomFields2__c</fullName>
    <description>Enter the list of additional custom fields from the line item object displayed in the custom view cart page</description>
    <inlineHelpText>Enter the list of additional custom fields from the line item object displayed in the custom view cart page</inlineHelpText>
    <label>View Cart Custom Fields 2</label>
    <type>TextArea</type>
</CustomField>