force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__ViewCartCustomFields__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ViewCartCustomFields__c</fullName>
    <description>Enter the list of custom fields from the line item object displayed in the custom view cart page</description>
    <inlineHelpText>Enter the list of custom fields from the line item object displayed in the custom view cart page. Additional fields may be entered using the View Cart Custom Fields 2 custom setting.</inlineHelpText>
    <label>View Cart Custom Fields</label>
    <type>TextArea</type>
</CustomField>