force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__ViewCartPage__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ViewCartPage__c</fullName>
    <description>The custom page to view cart information</description>
    <label>View Cart Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>