force-app/main/default/objects/Apttus_Config2__ConfigSystemProperties__c/fields/Apttus_Config2__ViewCartTotalCustomFields__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ViewCartTotalCustomFields__c</fullName>
    <description>Enter the list of custom fields from the summary group object displayed in the custom view cart page</description>
    <inlineHelpText>Enter the list of custom fields from the summary group object displayed in the custom view cart page</inlineHelpText>
    <label>View Cart Total Custom Fields</label>
    <type>TextArea</type>
</CustomField>